source/sass/_patterns.sass
.align-left
  text-align: left
.align-center
  text-align: center
.align-right
  text-align: right

ul, ol
  margin-left: rem-calc(30)
  > li
    font-weight: $font-weight-lighter

span.break:before
  content: '\A'
  white-space: pre

a.button
  +transition(all 0.25s)
  border: solid 1px $accent
  border-radius: $global-radius
  font-size: rem-calc(14)
  padding: rem-calc(14 20)
  text-transform: uppercase
  &.dark-border
    border-color: $text-dark
  &:hover
    +transition(all 0.25s)
    border-color: $accent
    background-color: $accent
    color: $white

.page-section
  padding: rem-calc(90 0)
  &.half-padding
    padding: rem-calc(45 0)

.page-section-header
  margin-bottom: rem-calc(40)
  text-align: center

.theme-blue-gradient
  +background-image(linear-gradient(to right, #83A4D4, #A0D7DA))
  color: $white
  h1, h2, h3, h4, h5
    color: $white

.theme-light-bg
  background-color: $light-bg

.theme-dark-bg
  background-color: $dark-bg
  h1, h2, h3, h4, h5
    color: $white

